--- a/opac/htdocs/opac-tmpl/join.html
+++ b/opac/htdocs/opac-tmpl/join.html
@@ -16,7 +16,7 @@
 
 
 --><!------------------------MENUS-------------------------------->
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 function swap(id,src){
 document.getElementById(id).src=src;
 }
