--- a/opac/htdocs/opac-tmpl/help/help.htm
+++ b/opac/htdocs/opac-tmpl/help/help.htm
@@ -5,7 +5,7 @@
 
 <body >
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 function swap(id,src){
 document.getElementById(id).src=src;
 }
